# geoxan

./: .gitmodules  CMakeLists.txt  README.md
game/: geoxan
game/cfg/: settings.cfg
game/resources/: license.txt
inc/raudio/: raudio.h
inc/raymath/: raymath.h
src/: app.cpp  app.h  basestate.cpp  basestate.h  gamestate.cpp  gamestate.h  icon.h  main.cpp  titlestate.cpp  titlestate.h
tools/: image2icon.sh
